modules/brscript/tests/scripts/analyzer/errors/use_value_of_void_function_gd_utility.br
func test():
	print(print_debug()) # BRScript utility function.
